fix: scrollbar color for firefox

--- a/client/src/app/(music)/_/components/MusicList/styles.module.scss
+++ b/client/src/app/(music)/_/components/MusicList/styles.module.scss
@@ -23,16 +23,11 @@
   border-radius: 50%;
 }
 
-// .musicListContainer {
-//   overflow: auto;
-//   width: 100%;
-//   height: 100%;
-
-//   @media screen and (width <= 425px) {
-//     height: calc(100dvh - 140px);
-//   }
-// }
-
+@supports (-moz-appearance: none) {
+  .musicList {
+    scrollbar-color: $accent transparent; /* Apply scrollbar color for Firefox */
+  }
+}
 .musicList {
   list-style: none;
   color: $text;
@@ -43,7 +38,6 @@
   &::-webkit-scrollbar-track {
     background: transparent;
   }
-
   &::-webkit-scrollbar-thumb {
     background-color: $accent;
     border-radius: 10px;
